# democratic_machine_learning

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIG.md  DEEP_RECURSIVE_INVESTIGATION.md  DEMOCRATIC_RESEARCH_SYSTEM_FLOWCHART.mmd  DEMOCRATIC_SYSTEM_FLOWCHART.mmd  ENHANCED_LOGGING.md  EXECUTION_PLAN.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHD_LEVEL_EXECUTION_PLAN.md  PROFILES_WALKTHROUGH.md  README.md  REAL_EXECUTION_FIX_SUMMARY.md  REAL_EXECUTION_README.md  TUTORIAL.md  anti_corruption_timeline_plan.md  comprehensive_immigration_analysis.json  config.yaml  critique_and_cross_reference_plan.md  deep_research_execution.py  demo_deep_recursive_investigation.py  democratic_engine.py  generate_florida_report.py  governance_reasoning_engine.py  justfile  national_election_policy_report.md  national_immigration_report.md  policy_domains.json  pyproject.toml  real_execution_system.py  run_all_domains.py  run_all_domains.sh  run_all_domains_simple.sh  run_comprehensive_analysis.py  run_comprehensive_immigration_analysis.py  run_election_analysis.py  run_immigration_eval.py  run_state_multi_perspective_analysis.py  (+16 more)
config/: demo.yaml  production.yaml
configs/: demo.yaml  production.yaml
output/: analysis_climate.json  analysis_climatechangepolicy.json  analysis_economicpolicy.json  analysis_education.json  analysis_educationfunding.json  analysis_healthcare.json  analysis_healthcarereform.json  analysis_immigrationreform.json  deep_research_all_topics.json  final_test.json  governance_model_us_national.json  governance_model_us_national.md  (+8 more)
src/: __init__.py  (+3 more)
(+5161 files in other folders)
